<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/Tablayout"
        android:background="@drawable/wave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/white">

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tablayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Signup"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="26sp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/txtEmail"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:id="@+id/edtEmail"
                    android:hint="@string/enter_email"
                    android:layout_margin="20dp"
                    android:drawableStart="@drawable/account"
                    android:padding="6dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/back"
                    />


<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/txtPassword"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="20dp"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/enter_password"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:id="@+id/etdPasswod"
                    android:inputType="textPassword"
                    android:layout_margin="20dp"
                    android:background="@drawable/back" />


<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conform_password"
                android:id="@+id/txtConformPassword"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_password"
                android:textSize="20sp"
                android:padding="5dp"
                android:id="@+id/edtConformpassword"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:background="@drawable/back" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/signup"
                android:padding="10dp"
                android:backgroundTint="@color/pink"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/Login"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="26sp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_email"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:background="@drawable/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_password"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:background="@drawable/back" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/signup"
                android:padding="10dp"
                android:backgroundTint="@color/pink"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>




        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
